<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bolla.baccalculator.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/weight_string"
            android:id="@+id/weightTextView"
            android:textColor="@color/abc_search_url_text_pressed" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/enterWeight"
            android:hint="@string/enterweight_string"
           android:inputType="numberDecimal"
            android:textAlignment="center"/>

        <Switch
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/gender_string"
            android:id="@+id/genderSwitch"
            android:focusableInTouchMode="false"
            android:showText="true"
            android:textOff="F"
            android:textOn="M"
            android:textSize="15dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_string"
        android:id="@+id/saveButton"
        android:layout_marginTop="15dp"
         />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/drink_string"
            android:id="@+id/drinkSizeText"
            android:textColor="@color/abc_search_url_text_pressed"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/radioGroup"
            android:textAlignment="center"
            android:paddingStart="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioDrink1"
                android:id="@+id/rB1"
                android:checked="true"
                android:textSize="16dp"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioDrink2"
                android:id="@+id/rB2"
                android:textSize="16sp"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioDrink3"
                android:id="@+id/rB3"
                android:textSize="16dp"
                />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/alcohol_string"
            android:id="@+id/alcoholTextView"
            android:textColor="@color/abc_search_url_text_pressed"
            />

        <SeekBar
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:id="@+id/alcoholSlider"
            android:max="5"
            android:progress="@integer/progress_increment"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/alcoholPerc"
            android:text="@string/alcohol_initial_perc"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_drink_string"
            android:id="@+id/addDrinkButton"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/reset_string"
            android:id="@+id/resetButton"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bac_string"
            android:id="@+id/bacLevelText"
            android:textSize="30dp"
            android:textAlignment="textEnd"
            android:layout_marginLeft="35dp"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bac_initial_value"
            android:id="@+id/bacLevelValue"
            android:textSize="30dp"
            android:inputType="numberDecimal"
            android:maxLength="4" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_marginTop="7dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/status_title_string"
            android:id="@+id/yourStatusText"
            android:textSize="20dp"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/your_safe_string"
            android:id="@+id/yourStatusValue"
            android:background="#418707"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:textSize="20dp"

            />
    </LinearLayout>

</LinearLayout>
